css/main.css
/*blue: #164B77
red: #B81818
violet: #660066*/

* {
	box-sizing: border-box;
}

html, body {
	font-size: 62.5%;
}

header, main {
	font-size: 1.6rem;
}

footer {
	font-size: 1.4rem;
}

a {
	color: white;
	text-decoration: none;
}

	a:hover {
		color: white;
	}

p {
	margin: 0;
}

nav {
	box-sizing: border-box;
	font-size: 1em;
	width: 100%;
	height: 80px;
	background-color: #660066;
	position: absolute;
	top: 0;
}
	
	nav a#logo {
		float: left;
		margin-left: 20px
	}

	nav ul {
		width: 100%;
	}

main {
	margin-top: 80px !important;
	/*padding-top: 40px !important;*/
	padding-bottom: 80px !important;
}

.slider {
	display: block;
	overflow: hidden;
}
	.slider-item {
		width: 100%;
	}

.cS-hidden {
    height: 1px;
    opacity: 0;
    filter: alpha(opacity=0);
    overflow: hidden;
}

.lSSlideWrapper, .lSSlideWrapper .lSSlide {
	height: 80vh !important;
}

.lSSlideWrapper .lSSlide {
	list-style: none;
}

.lgv_featureboxes {
	display: block;
	margin-top: 40px;
}

.lgv_featurebox, .lgv_boxlistitem, .lgv_card {
	box-shadow:0 1px 2px #aaa;
	/*height: 300px;*/
	padding: 2rem;
	border-radius:3px;
	margin-bottom: 40px;
}
	.lgv_featurebox-list {
		list-style: none;
	}

	@media (max-width: 850px) and (min-width: 550px) {
		.lgv_featurebox-header {
			font-size: 2em;
		}	
	}
	
	.lgv_featurebox-header {
		display: block;
		border-bottom-width: 1px;
		border-bottom-style: solid;
	}

	.lgv_featurebox-item {
	}

	/*.lgv_boxlistitem {
		margin-bottom: 40px;
	}*/

	.lgv_boxlistitem img, .lgv_boxlistitem article {
		position: relative;
		float: left;
		width: 100%;
	}

	.lgv_boxlistitem article {
		margin-top: 40px;
		margin-left: 0;
	}

	@media (min-width: 769px) {
		.lgv_boxlistitem img, .lgv_boxlistitem article {
			width: 45%;
		}

		.lgv_boxlistitem article {
			margin-top: 0;
			margin-left: 40px;
		}
	}

	.lgv_card figure {
		margin: 0;
	}

		.lgv_card figure img {
			width: 80%;
			border-radius: 50%;
			display: block;
			margin: 0 auto;
		}

		.lgv_card figcaption {
			margin: 20px auto;
			text-align: center;
		}

		.lgv_card .lgv_carddetail {
			text-align: left;
		}


footer {
	background-color: silver;
	height: 240px;
	padding-top: 40px;
}
	.sitemap_links {
		display: inline-block;
		width: 30%;
		line-height: 1.5em;
		margin: 2px 2.5%;
	}

@media screen and (min-width: 320px) {
	nav {
		padding: 20px 0;
	}

	nav ul {
		display: none;
		height: auto;
	}

	nav ul li {
		display: block;
		width: 100%;
		position: relative;
		z-index: 5;
		float: left;
		background-color: #660066;
		margin: 0;
	}

	nav ul li a {
		display: block;
		width: 100%;
		margin: 0 auto;
		text-align: center;
		padding: 20px;
	}

	nav ul li a:hover {
		background-color: #B81818;
	}

	nav a#pull {
		display: block;
		float: right;
		margin-right: 20px;
	}
}

@media screen and (min-width: 769px) {

	nav {
		padding: 0;
	}

	nav ul {
		display: block;
		width: 100%;
		height: inherit;
	}

	nav ul li {
		width: 10%;
		position: relative;
		float: right;
		height: 100%;
		/*display: inline-block;
		width: 10%;
		position: relative;
		float: right;*/
	}

	nav ul li a {
		display: inline-block;
		width: 100%;
		position: relative;
		float: right;
		padding: 25px 0 20px;
		height: 100%;
	}

	nav a#pull {
		display: none;
	}
}

